--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -2,48 +2,75 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/common :: head('게시판')">
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="/static/css/starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
-
-    <title>게시판</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
     </nav>
-    <div class="container">
-        <h2>게시판</h2>
-        <form action="#" th:action="@{/board/form}" th:object="${board}" method="post">
-            <input type="hidden" th:field="*{id}">
-            <div class="form-group">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" 
-                    th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" id="title" th:field="*{title}">
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
-                    제목 에러 메시지
-                </div>
-            </div>
 
-            <div class="form-group">
-                <label for="content">내용</label>
-                <textarea class="form-control" id="content" rows="3" th:field="*{content}"
-                    th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'"></textarea>
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
-                    제목 에러 메시지
-                </div>
+ <div class="container">
+        <h2>게시판</h2><br/>
+        <form>
+		 <div class="form-group">
+	          <label for="title">제목</label>
+	          <input for="title" type="text" id="title" name="title" >
+		 </div>
+          <div class="form-group">
+              <label for="content">내용</label>
+              <textarea or="content" class="form-control" id="content" name="content" rows="3"></textarea>
+          </div>
+          <div class="text-right">
+               <a type="button" class="btn btn-primary" th:href="@{/board/list}">취소</a>
+               <button type="submit" class="btn btn-primary" >제출</button>
+          </div>
+      </form>
+  
+  
+        <!--        <div>총 건수 : <span th:text="${boards.totalElements}"></span></div>
+        <form class="form-inline d-flex justify-content-end" method="GET" th:action="@{/board/list}">
+            <div class="form-group mx-sm-3 mb-2">
+                <label for="searchText" class="sr-only">검색</label>
+                <input type="text" class="form-control" id="searchText" name="searchText"
+                    th:value="${param.searchText}">
             </div>
-            <div class="text-right">
-                <a type="button" class="btn btn-primary" th:href="@{/board/list}">취소</a>
-                <button type="submit" class="btn btn-primary">확인</button>
-            </div>
+            <button type="submit" class="btn btn-light mb-2">검색</button>
         </form>
-    </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">번호</th>
+                    <th scope="col">제목</th>
+                    <th scope="col">작성자</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="board : ${boards}">
+                    <td th:text="${board.id}">Mark</td>
+                    <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}">Otto</a></td>
+                    <td th:text="${board.user.username}">홍길동</td>
+                </tr>
+            </tbody>
+        </table>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${1 == boards.pageable.pageNumber + 1} ? 'disabled'">
+                    <a class="page-link" href="#"
+                        th:href="@{/board/list(page=${boards.pageable.pageNumber - 1},searchText=${param.searchText})}"
+                        tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+                <li class="page-item" th:classappend="${i == boards.pageable.pageNumber + 1} ? 'disabled'" th:each="i : ${#numbers.sequence(startPage, endPage)}">
+                  <a class="page-link" href="#" th:href="@{/board/list(page=${i - 1},searchText=${param.searchText})}" th:text="${i}">1</a>
+                </li>
+              <li class="page-item" th:classappend="${boards.totalPages == boards.pageable.pageNumber + 1} ? 'disabled'">
+                <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber + 1},searchText=${param.searchText})}">Next</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="text-right">
+            <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
+        </div>-->
+    </div> 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
