--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -11,14 +11,14 @@
 
  <div class="container">
         <h2>게시판</h2><br/>
-        <form>
-		 <div class="form-group">
+        <form action="#" th:action="@{/board/form}" th:object="${board}" th:method="post">    <!--object="$(board)는 board를 받은 객체로 사용한다고 선언--> 
+		 <div class="form-group">															   <!--object board를 서버에서 보내놓음--> 
 	          <label for="title">제목</label>
-	          <input for="title" type="text" id="title" name="title" >
+	          <input class="form-control" type="text" id="title" th:field="*{title}"></input>  <!--th:object에 설정해 준 객체의 내부 변수와 매칭해준다.-->
 		 </div>
           <div class="form-group">
               <label for="content">내용</label>
-              <textarea or="content" class="form-control" id="content" name="content" rows="3"></textarea>
+              <textarea class="form-control" id="content" rows="3" th:field="*{content}"></textarea>
           </div>
           <div class="text-right">
                <a type="button" class="btn btn-primary" th:href="@{/board/list}">취소</a>
