--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -12,9 +12,11 @@
  <div class="container">
         <h2>게시판</h2><br/>
         <form action="#" th:action="@{/board/form}" th:object="${board}" th:method="post">    <!--object="$(board)는 board를 받은 객체로 사용한다고 선언--> 
+		
+		<input type="hidden" th:field="*{id}">
 		 <div class="form-group">															   <!--object board를 서버에서 보내놓음--> 
 	          <label for="title">제목</label>
-	          <input class="form-control" type="text" id="title" th:field="*{title}"></input>  <!--th:object에 설정해 준 객체의 내부 변수와 매칭해준다.-->
+	          <input class="form-control" type="text" id="title" th:field="*{title}">          <!--th:object에 설정해 준 객체의 내부 변수와 매칭해준다.-->
 		 </div>
           <div class="form-group">
               <label for="content">내용</label>
