--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -23,8 +23,8 @@
             </thead>
             <tbody>
               <tr th:each="board : ${boards}" >
-                <td th:text="${board.id}">1</th>
-                <td th:text="${board.title}">Mark</td>
+                <td><a th:text="${board.id}" th:href="@{/board/form(id=${board.id})}">1</a></th>
+                <td><a  th:text="${board.title}" th:href="@{/board/form(id=${board.id})}">Mark</a></td>
                 <td th:text="${board.content}">Otto</td>
                 <td>홍길동</td>
               </tr>
