--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -1,26 +1,34 @@
-<!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>  
+<html xmlns:th="http://www.thymeleaf.org"> 
+ 
+<head th:replace="fragments/common :: head('게시판')"> 
 
-<head th:replace="fragments/common :: head('게시판')">
+</head> 
 
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
-    </nav>
-
- <div class="container">
-        <h2>게시판</h2><br/>
-        <form action="#" th:action="@{/board/form}" th:object="${board}" th:method="post">    <!--object="$(board)는 board를 받은 객체로 사용한다고 선언--> 
+<body> 
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')"> 
+    </nav> 
+ 
+ <div class="container"> 
+        <h2>게시판</h2><br/> 
+        <form action="#" th:action="@{/board/form}" th:object="${board}" th:method="post">     <!--object="$(board)는 board를 받은 객체로 사용한다고 선언--> 
 		
 		<input type="hidden" th:field="*{id}">
-		 <div class="form-group">															   <!--object board를 서버에서 보내놓음--> 
+			 <div class="form-group">															   <!--object board를 서버에서 보내놓음--> 
 	          <label for="title">제목</label>
-	          <input class="form-control" type="text" id="title" th:field="*{title}">          <!--th:object에 설정해 준 객체의 내부 변수와 매칭해준다.-->
+	          <input class="form-control"  
+	          	  th:classappend="${#fields.hasErrors('title')}? 'is-invalid'" type="text" id="title" th:field="*{title}">          <!--th:object에 설정해 준 객체의 내부 변수와 매칭해준다.-->
+			  <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+			     제목 에러 메세지
+			  </div>
 		 </div>
           <div class="form-group">
               <label for="content">내용</label>
-              <textarea class="form-control" id="content" rows="3" th:field="*{content}"></textarea>
+              <textarea class="form-control" 
+             	  th:classappend="${#fields.hasErrors('content')}? 'is-invalid'"id="content" rows="3" th:field="*{content}"></textarea>
+  			  <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
+			     내용 에러 메세지
+			  </div>
           </div>
           <div class="text-right">
                <a type="button" class="btn btn-primary" th:href="@{/board/list}">취소</a>
