--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">   <!--thymeleaf-extras-springsecurity5 DI 시켜준다-->
 <head th:fragment="head(title)">
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -42,16 +42,23 @@
                 </li> -->
             </ul>
             
-   <!--          <a class="btn btn-secondary my-2 mr-2 my-sm-0" th:href="@{/account/login}"
+         <a class="btn btn-secondary my-2 mr-2 my-sm-0" th:href="@{/account/login}"
                 sec:authorize="!isAuthenticated()">로그인</a>
-            <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/account/register}"
+                
+                
+               <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/account/register}"
                 sec:authorize="!isAuthenticated()">회원가입</a>
+                
+                
            <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="POST" sec:authorize="isAuthenticated()">
-                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
+        <!--<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
+           
                 <span class="text-white" sec:authentication="name">사용자</span>
+              
                 <span class="text-white mx-2" sec:authentication="principal.authorities">권한</span>
+                
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
-            </form>-->
+            </form>
         </div>
     </nav>
   </body>  
