--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -28,8 +28,8 @@
               <tr>
                 <th scope="col">번   호</th>
                 <th scope="col">제   목</th>
+                <th scope="col">내   용</th>
                 <th scope="col">작 성 자</th>
-                <th scope="col">비   고</th>
               </tr>
             </thead>
             <tbody>
